.provarCaches/00Df2000001KKNJEA4/objects/Incap311__Log_Event__e.object
<CustomObject>
    <fields>
        <fullName>Incap311__Event_Time__c</fullName>
        <label>Event Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Incap311__Log_Details__c</fullName>
        <label>Log Details</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Incap311__UserId__c</fullName>
        <label>UserId</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <label>Log Event</label>
    <pluralLabel>Log Events</pluralLabel>
</CustomObject>